--- a/client/src/App.css
+++ b/client/src/App.css
@@ -225,39 +225,85 @@ Columns
   background-color: #e2e6ea;
 }
 
-
 .add-board-form {
   background-color: #f0f0f0;
   padding: 20px;
   margin: 20px 0;
   border-radius: 8px;
-  position: fixed; 
-  top: 50%; 
-  left: 50%; 
+  position: fixed;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  width: 300px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  z-index: 1000; 
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
 }
 
 .add-board-form input,
 .add-board-form button {
-  display: block; 
+  display: block;
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
   margin-top: 10px;
-  border: 1px solid #ccc; 
-  border-radius: 4px; 
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 .add-board-form button {
   background-color: #007bff;
   color: white;
-  font-weight: bold; 
-  cursor: pointer; 
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .add-board-form button:hover {
   background-color: #0056b3;
+}
+
+/* 버튼 스타일 */
+.add-board-btn,
+.invite-board-btn {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.add-board-btn:hover,
+.invite-board-btn:hover {
+  background-color: #45a049;
+}
+
+/* 모달 스타일 */
+.invite-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px; /* 패딩 */
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  width: 300px;
+}
+
+/* 모달 내부 버튼  */
+.invite-modal button {
+  background-color: #008cba;
+  color: white;
+  padding: 10px 20px;
+  margin: 10px 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.invite-modal button:hover {
+  background-color: #007b9e;
 }
